2010-06-14  Chris Toshok  <toshok@ximian.com>

	* capture.cpp: comment out spew.

	* pal/pal.h: use enums for everything.  allow us to specify yes/no
	buttons for message dialogs (but not managed code), and allow
	us (and again not managed code) to change the message box type.

	* pal/gtk/pal-gtk.h,cpp: track new messagebox api.

	* pal/capture/pal-linux-capture.cpp (MoonCaptureServiceLinux::RequestSystemAccess):
	pop up a message box using the windowing service to request
	permission.

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp: comment out spew.

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* deployment.cpp|h: Track deployment initialization time since
	some properties can only be set at that time. If no set by the
	manifest then set ExternalCallersFromCrossDomainProperty to 
	CrossDomainAccessNoAccess when initialization is complete
	* security.h: ElevatedPermissionsProperty can only be set during
	deployment initialization
	* validator.cpp|h: Remove CrossDomainValidator and replace it
	with [NonNull]OnlyDuringInitializationValidator

2010-06-04  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.cpp (TextSelection): More stubbing action.

2010-06-04  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: When we emit a proxied loaded event we
	  should remove the proxied handler otherwise we'll never
	  unref the DO who emitted the loaded event and it will live
	  forever and ever and ever.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/install-dialog.cpp: Make oob xap downloading's send sync (again).

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Implement byte range requests for ProgressiveSource.

	* network.h: Remove HttpOptions::EnableSeeking, byte range requests are
	handled manually in ProgressiveSource.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp|h: Add a HttpResponse::ContainsHeader utility method.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
