@@ -1,3 +1,8 @@
+2010-06-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* network-curl.cpp|h: Clean up statusText properly, and ensure to call
+	SetStatus on the HttpResponse so that policies know we succeeded.
+
 2010-06-14  Chris Toshok  <toshok@ximian.com>
 
 	* capture.cpp: comment out spew.
